--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
         "tailwindcss": "^3.1.0",
         "vite": "^5.0.0",
         "vue": "^3.2.31"
+    },
+    "dependencies": {
+        "pinia": "^3.0.2",
+        "vuedraggable": "^4.1.0"
     }
 }
