feat(realtime): implement real-time task updates with Laravel Reverb and Echo
- Installed and configured Laravel Reverb.
- Created TaskCreated, TaskUpdated, TaskDeleted events implementing ShouldBroadcast.
- Implemented TaskObserver to dispatch these events on model changes.
- Registered TaskObserver in AppServiceProvider.
- Installed laravel-echo and pusher-js on the frontend.
- Configured Laravel Echo in bootstrap.js to connect to Reverb.
- Updated Pinia taskStore to listen for task events on a public 'tasks' channel.
- Integrated event listeners into TaskBoard.vue to update UI in real-time.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "laravel-echo": "^2.1.4",
         "pinia": "^3.0.2",
+        "pusher-js": "^8.4.0",
         "vuedraggable": "^4.1.0"
     }
 }
