--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.8",
         "laravel/framework": "^10.10",
+        "laravel/reverb": "^1.5",
         "laravel/sanctum": "^3.3",
+        "laravel/scout": "^10.15",
         "laravel/tinker": "^2.8",
         "tightenco/ziggy": "^2.0"
     },
